# dagster_qa_extractor

./: .env.example  .gitignore  Dockerfile  LICENSE  Modelfile  README.md  draft.ipynb  pyproject.toml  workspace.yaml
.github/workflows/: lint.yaml  test.yaml
data/: videos.csv
embedding_databases/test_book/: chroma.sqlite3
results/: Agents_extracted_entries.json  Building effective agents _ Anthropic_extracted_entries.json  LPZh9BOjkQs_extracted_entries.json  eMlx5fFNoYc_extracted_entries.json  labeled_interview_qa_bertopic.json  merged_20250223_210238.json  topic_details.json  wjZofJX0v4M_extracted_entries.json
test_book/: chroma.sqlite3
workspace/: main.py
workspace/src/: extract_entities.py
workspace/test/: test_extract_entities.py
workspaces/extract_interview_questions/: pyproject.toml
workspaces/extract_interview_questions/src/: definitions.py  definitions_openai.py  jobs.py  jobs_openai.py
workspaces/extract_interview_questions/src/assets/: text_processing_asset.py  text_processing_asset_openai.py  transcript_processing_asset.py  utils.py  ytb_transcript_processing_asset.py
workspaces/extract_interview_questions/src/resources/: models.py  ollama_ressource.py  openai_ressource.py
workspaces/extract_interview_questions/src/scripts/: clean_merge.py  testing_youtube_transcript.py  topic_modeling.py
workspaces/extract_interview_questions/tests/: test_hello.py
