[project]
name = "extract_interview_questions"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "openai>=1.58.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.dagster]
module_name = "src.extract_interview_questions.definitions"
code_location_name = "extract_interview_questions"
